Add ExpressVPN automatic recovery
