# src/TorrentCore.Contracts/Host/RuntimeSettingsDto.cs
@@ -45,6 +45,9 @@ public sealed class RuntimeSettingsDto
     public int                      VpnEgressReadyCheckIntervalSeconds              { get; init; }
     public int                      VpnEgressRequestTimeoutSeconds                  { get; init; }
     public int                      VpnEgressEngineSuspensionTimeoutSeconds         { get; init; }
+    public string                   ExpressVpnAutomaticRecoveryMode                 { get; init; } = "Disabled";
+    public int                      ExpressVpnRecoveryDelaySeconds                   { get; init; } = 180;
+    public int                      ExpressVpnUnavailableLaunchDelaySeconds          { get; init; } = 300;
     public bool                     RuntimeTickDurationSummaryEnabled               { get; init; }
     public required int             AppliedEngineMaximumConnections                { get; init; }
     public required int             AppliedEngineMaximumHalfOpenConnections        { get; init; }
